--- a/dashboard.html
+++ b/dashboard.html
@@ -24,18 +24,18 @@
             
             <div class="caixa">
 
-                <div class="caixa_topo">
+                <div class="caixa_topo_dash">
                     <h2>Vendas</h2>
                 </div>
 
-                <div class="caixa_corpo">
+                <div class="caixa_corpo_dash">
                     <h3>1850</h3>
                 </div>
                 
             </div>
             <div class="caixa">
 
-                <div class="caixa_topo">
+                <div class="caixa_topo_dash">
                     <h2>Produto</h2>
                 </div>
 
@@ -47,7 +47,7 @@
 
             <div class="caixa">
 
-                <div class="caixa_topo">
+                <div class="caixa_topo_dash">
                     <h2>Lucro</h2>
                 </div>
 
@@ -58,7 +58,7 @@
             </div>
             <div class="caixa">
 
-                <div class="caixa_topo">
+                <div class="caixa_topo_dash">
                     <h2>Desp</h2>
                 </div>
 
